# ceng795

./: .gitignore  README.md  Vec3f.h
HW1/: Camera.h  Hit_data.h  Makefile  Mesh.h  Point_light.h  Scene.cpp  Scene.h  Shape.h  Sphere.h  Triangle.cpp  Triangle.h  Vector3.cpp  Vector3.h  Vector3i.cpp  Vector3i.h  main.cpp  ray.h  timeutil.h
HW2/: Bounding_box.h  Bounding_volume_hierarchy.cpp  Bounding_volume_hierarchy.h  Camera.h  Material.h  Mesh.h  Pixel.h  Ray.h  Scene.cpp  Scene.h  Shape.h  Sphere.h  Triangle.cpp  Triangle.h  Vector3.h  bounding_box.cpp  main.cpp
HW3/: CMakeLists.txt  buildwithoutcmake.sh  generate_unix.sh  generate_xcode.sh
HW3/include/: Area_light.h  Bounding_box.h  Bounding_volume_hierarchy.h  Camera.h  Material.h  Matrix4x4.h  Mesh.h  Mesh_triangle.h  Ray.h  Scene.h  Sphere.h  Transformation.h  Triangle.h  Vertex.h
HW3/src/: Matrix4x4.cpp  Mesh_triangle.cpp  Scene.cpp  Transformation.cpp  Triangle.cpp  bounding_box.cpp  main.cpp
HW4/: CMakeLists.txt
HW4/include/: Camera.h  Hit_data.h  Image_plane.h  Material.h  Matrix4x4.h  Mesh.h  Mesh_triangle.h  Perlin_noise.h  Scene.h  Sphere.h  Texture.h  Triangle.h  Vector3.h  Vertex.h
HW4/src/: Matrix4x4.cpp  Mesh_triangle.cpp  Perlin_noise.cpp  Scene.cpp  Sphere.cpp  Texture.cpp  Triangle.cpp
HW5/: CMakeLists.txt  buildwithoutcmake.sh  generate_vs2017.bat
HW5/include/: Area_light.h  Bounding_volume_hierarchy.h  Camera.h  Directional_light.h  Light.h  Photographic_tmo.h  Pixel.h  Point_light.h  Ray.h  Scene.h  Shape.h  Spot_light.h  Vertex.h
HW5/src/: Area_light.cpp  Mesh_triangle.cpp  Photographic_tmo.cpp  Point_light.cpp  Scene.cpp  Sphere.cpp  Spot_light.cpp  Texture.cpp  Triangle.cpp  bounding_box.cpp  main.cpp
HW6/: CMakeLists.txt
HW6/include/: BRDF.h  Light.h  Material.h  Null_tmo.h  Phong_BRDF.h  Scene.h  Tonemapping_operator.h  Torrance_sparrow_BRDF.h
HW6/src/: Blinn_phong_BRDF.cpp  Directional_light.cpp  Modified_blinn_phong_BRDF.cpp  Null_tmo.cpp  Perlin_noise.cpp  Phong_BRDF.cpp  Scene.cpp  Spot_light.cpp  Transformation.cpp  main.cpp
HW7/: CMakeLists.txt
HW7/include/: Area_light.h  BRDF.h  Blinn_phong_BRDF.h  Bounding_volume_hierarchy.h  Camera.h  Directional_light.h  Hit_data.h  Light.h  Light_mesh.h  Light_sphere.h  Mesh.h  Mesh_triangle.h  Modified_blinn_phong_BRDF.h  Modified_phong_BRDF.h  Perlin_noise.h  Phong_BRDF.h  Pixel.h  Point_light.h  Ray.h  Scene.h  Shape.h  Sphere.h  Spherical_directional_light.h  Spot_light.h  Texture.h  Tonemapping_operator.h  Triangle.h  Vector3.h
HW7/src/: Area_light.cpp  Bounding_volume_hierarchy.cpp  Directional_light.cpp  Light_mesh.cpp  Light_sphere.cpp  Mesh_triangle.cpp  Modified_phong_BRDF.cpp  Null_tmo.cpp  Phong_BRDF.cpp  Photographic_tmo.cpp  Point_light.cpp  Scene.cpp  Sphere.cpp  Spherical_directional_light.cpp  Spot_light.cpp  Texture.cpp  Torrance_sparrow_BRDF.cpp  Triangle.cpp  main.cpp
PPM/: CMakeLists.txt
PPM/include/: BRDF.h  Blinn_phong_BRDF.h  Bounding_box.h  Bounding_volume_hierarchy.h  Camera.h  Hit_point.h  Intersection.h  Light.h  Material.h  Mesh.h  Mesh_triangle.h  Modified_blinn_phong_BRDF.h  Modified_phong_BRDF.h  Phong_BRDF.h  Photographic_tmo.h  Point_light.h  Ray.h  Scene.h  Shape.h  Sphere.h  Torrance_sparrow_BRDF.h  Transformation.h  Vector3.h  Vertex.h
PPM/src/: Blinn_phong_BRDF.cpp  Bounding_box.cpp  Bounding_volume_hierarchy.cpp  Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  Mesh_triangle.cpp  Modified_blinn_phong_BRDF.cpp  Modified_phong_BRDF.cpp  Phong_BRDF.cpp  Photographic_tmo.cpp  Point_light.cpp  Scene.cpp  Sphere.cpp  Torrance_sparrow_BRDF.cpp  Transformation.cpp  Vector3.cpp  main.cpp
