cmake_minimum_required (VERSION 3.11)

project (ppm)
# The version number
set(raytracer_VERSION_MAJOR 1)
set(raytracer_VERSION_MINOR 0)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

include_directories("include")
set(CMAKE_CURRENT_SOURCE_DIR "src")
set(CMAKE_CURRENT_HEADER_DIR "include")

list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Vector3.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Material.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Camera.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Photographic_tmo.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/tinyexr.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/tinyxml2.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/lodepng.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Matrix4x4.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Transformation.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Scene.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Bounding_box.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Bounding_volume_hierarchy.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Sphere.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Mesh_triangle.cpp")
list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/Mesh.cpp")
#list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/.cpp")
#list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/.cpp")
#list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/.cpp")
#list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/.cpp")
#list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/.cpp")
#list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/.cpp")
#list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/.cpp")
#list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/.cpp")
#list(APPEND SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/.cpp")

list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Vector3.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Camera.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Matrix4x4.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Material.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Ray.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Tonemapping_operator.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Photographic_tmo.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/stb_image.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/timeutil.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/tinyexr.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/tinyxml2.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/lodepng.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Transformation.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Scene.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Intersection.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Shape.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Bounding_box.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Bounding_volume_hierarchy.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Sphere.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Vertex.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Mesh_triangle.h")
list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/Mesh.h")
#list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/.h")
#list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/.h")
#list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/.h")
#list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/.h")
#list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/.h")
#list(APPEND HEADERS "${CMAKE_CURRENT_HEADER_DIR}/.h")

message([${SOURCES})

add_executable(ppm ${SOURCES} ${HEADERS})
target_link_libraries( ppm ${OpenCV_LIBS} )
